[test] Trigger auto release, change name to Axonigma

--- a/hugo.toml
+++ b/hugo.toml
@@ -29,7 +29,7 @@ defaultContentLanguage = "en"
   avatar = "/images/avatar.png"
 
   [params.author]
-    name = "Samaita"
+    name = "Axonigma"
     avatar = "/images/avatar.png"
 
 [pagination]
